# BeerThermoregulationSystem

./: .gitignore  .gitmodules  README.md
Firmware/: CMakeLists.txt
Firmware/App/src/: driver_setup.c
Firmware/PrototypeFirmwareLeonardo/: platformio.ini
Firmware/PrototypeFirmwareLeonardo/src/: main.cpp
Mechanical/: HeatExchangerCore.FCStd  HeatExchangerCore.FCStd1
Mechanical/3DPrinting/: AirDuct.stl  BaseStand.stl  BoardHolder.stl  CounterPlate.stl  HalfCore.stl  HeatExchangerCore-BaseStand.stl  HeatExchangerCore-CoreExchangerCounterPlate.stl  HeatExchangerCore-CoreExchangerHalfCore1.stl  LargeInlet.stl  MezzanineBoardHolder.stl  SmallInlet.stl  Spacers.stl
